--- a/categoria.html
+++ b/categoria.html
@@ -17,12 +17,12 @@
       <a href="#">&times;</a>
       <a href="#">Categoria</a>
       <a href="#">Processos</a>
-      <a href="#">Sair</a>
+      <a href="logout.php">Sair</a> 
   </nav>
   <!--Final do navbar-->
   <!-- Cadastrar categoria da cerveja -->
 <form class="center-form">
-      <h2 class="form-title">NOVA CATEGORIA</h2>
+  <h2 class="form-title">NOVA CATEGORIA</h2>
   <div class="row form-field" >
     <div class="col">
       <input type="text" class="form-control" placeholder="Nome">
