Atualização de estilos

--- a/criar-categoria.html
+++ b/criar-categoria.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <!--Barra de Navegador (Navbar)  
+  <!--Barra de Navegador (Navbar)  -->
   <nav class="navbar navbar-light bg-light">
-    <a href="#" class="btn-abrir">&#9776;</a>
-    <a href="index.html" class="navbar-brand mb-0 h1">Craft Beers</a>   
+    <a href="index.php" class="navbar-brand mb-0 h1">Craft Beers</a>   
   </nav>
-  <nav class="menu">      
-      <a href="#">&times;</a>
-      <a href="#">Categoria</a>
+  <nav class="menu">
+      <a href="lista-categorias.php">Categoria</a>
       <a href="#">Processos</a>
       <a href="logout.php">Sair</a> 
-  </nav>-->
+  </nav>
   <!--Final do navbar-->
   <!-- Cadastrar categoria da cerveja -->
 <form action="criar-categoria.php" method="POST" class="center-form">
