--- a/cadastro.html
+++ b/cadastro.html
@@ -10,13 +10,18 @@
 <body>
   <!--Barra de Navegador (Navbar)-->
   <nav class="navbar navbar-light bg-light">
-      <a href="/craftbeers" class="navbar-brand mb-0 h1">Craft Beers</a>
+    <a href="index.php" class="navbar-brand mb-0 h1">Craft Beers</a>   
   </nav>
-
+  <nav class="menu">
+      <a href="lista-categorias.php">Categoria</a>
+      <a href="#">Processos</a>
+      <a href="logout.php">Sair</a> 
+  </nav>
   <!--Final do navbar-->
-
+  <main class="content">
+    <div class="card card-padding">
   <!-- Formulário de Cadastro -->
-<form action="cadastro.php" method="POST" class="center-form">
+<form action="cadastro.php" method="POST" >
   <h2 class="form-title">CADASTRO</h2>
   <div class="row form-field" >
     <div class="col">
@@ -45,6 +50,8 @@
     <button type="submit" class="btn btn-outline-primary">Cadastrar</button>  
   </div>
 </form>
+  </div>
+</main>
 <!-- JQuery, Bootstrap -->
   <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
